--- a/src/public/views/my_courses.html
+++ b/src/public/views/my_courses.html
@@ -29,7 +29,7 @@
 
                                 <div class="sidebar-footer">
                                         <a href="/logout" class="logout-link">
-                                                <span>🚪</span> Logout
+                                                Logout
                                         </a>
                                 </div>
                         </nav>
