--- a/src/public/views/400.html
+++ b/src/public/views/400.html
@@ -7,8 +7,8 @@
                 <link rel="icon" type="image/svg+xml" href="public/resources/logo.svg">
         </head>
         <body>
-                <h1>404</h1>
-                <p>Page Not Found</p>
+                <h1>400</h1>
+                <p>Bad Request</p>
                 <a href="/dashboard">Go back to Dashboard</a>
         </body>
 </html>
